--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,28 @@
+spring.datasource.url=jdbc:postgresql://localhost:5433/IdeaFixDB
+
+# Username and password
+spring.datasource.username=antipavitaly
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entities found in
+# the project
+#spring.jpa.hibernate.ddl-auto = create-drop
+
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 server.port=8090
+
+
 
