-Refactoring + some bug/error fixes -Some entities creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,16 @@ spring.datasource.validationQuery = SELECT 1
 # Config
 spring.jpa.show-sql = true
 spring.data.jpa.repositories.enabled=true
+spring.jpa.database-platform=postgresql
+#
+#spring.datasource.tomcat.max-wait=20000
+#spring.datasource.tomcat.max-active=50
+#spring.datasource.tomcat.max-idle=20
+#spring.datasource.tomcat.min-idle=15
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
 
 # Security
 security.basic.enabled=false
