-Refactoring(DTO, pom.xml, application.properties, DAO, web configuration) -RestErrorHandler creation -Jwt/Security layer implementation(not final) -Some Utils creation -Sign controller with success login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,12 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 spring.data.jpa.repositories.enabled=true
 spring.jpa.database-platform=postgresql
-#
-#spring.datasource.tomcat.max-wait=20000
-#spring.datasource.tomcat.max-active=50
-#spring.datasource.tomcat.max-idle=20
-#spring.datasource.tomcat.min-idle=15
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=100
+spring.datasource.tomcat.max-idle=50
+spring.datasource.tomcat.min-idle=25
+spring.datasource.tomcat.remove-abandoned=true
+spring.datasource.tomcat.test-on-borrow=true
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
